# whitenoise-linux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  observability.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: _build.yml  ci.yml  release.yml
assets/: whitenoise-linux.desktop
lang/: darkmatter-linux.pot  dm-ui.pot  wnl-ui.pot
scripts/: po-clean.sh  update-root-aliases.sh  update-translations.sh
scripts/scenarios/: build.rb  chaotic.rb  cheeky.rb  screenshots.rb  soak.rb  utils.rb
src/: audio.rs  backend.rs  backup.rs  blossom.rs  chatlist.rs  chatmodel.rs  chrome.rs  clipboard.rs  deeplink.rs  export.rs  main.rs  media.rs  media_cache.rs  mentions.rs  mpv.rs  msg_search.rs  notify.rs  observability.rs  offline_queue.rs  profiles.rs  qr.rs  relays.rs  render.rs  send_complete.rs  settings.rs  startup.rs  state.rs  themes.rs  unread.rs  vault.rs
src/backend/: groups.rs  messaging.rs  profiles.rs
src/wiring/: attach.rs  backup.rs  chats.rs  contacts.rs  extra.rs  forward.rs  groups.rs  messaging.rs  mod.rs  nav.rs  panes.rs  search.rs
themes/: amoled.toml  chalkboard.toml  crayon.toml  dark.toml  light.toml  retro.toml  synthwave.toml  terminal.toml
ui/: CONTRACT.md  archived.slint  chat-list.slint  contacts.slint  dark-matter-linux.slint  emoji-cell.slint  emoji-picker.slint  get-started.slint  icons.slint  keys.slint  left-rail.slint  login.slint  main-pane.slint  mentions-icon.slint  messages.slint  modals.slint  primitives.slint  profile.slint  settings.slint  shells.slint  splash.slint  status-bar.slint  title-bar.slint  tokens.slint  white-noise-linux.slint
ui/archived/: archived-detail.slint  archived-list-item.slint  archived-page.slint  archived-sidebar.slint  meta-row.slint
ui/chat-list/: chat-context-menu.slint  chat-list-entry.slint  chat-list-item.slint  chat-list.slint
ui/contacts/: contact-detail.slint  contact-list-item.slint  contacts-page.slint  contacts-sidebar.slint  info-row.slint
ui/emoji/: emoji-cell.slint  emoji-picker.slint
ui/icons/: accounts-icon.slint  add-user-icon.slint  archive-icon.slint  ban-icon.slint  bell-icon.slint  camera-icon.slint  chat-bubble-icon.slint  check-mark.slint  chevron-down-icon.slint  chevron-right-icon.slint  chevron-up-icon.slint  copy-icon.slint  eye-icon.slint  info-icon.slint  key-icon.slint  lock-icon.slint  logo-mark.slint  mic-icon.slint  monitor-icon.slint  mute-icon.slint  paperclip-icon.slint  pencil-icon.slint  people-icon.slint  pin-icon.slint  plus-icon.slint  qr-icon.slint  refresh-icon.slint  save-icon.slint  search-icon.slint  send-icon.slint  settings-icon.slint  smiley-icon.slint  start-chat-icon.slint  terminal-icon.slint  trash-icon.slint  unarchive-icon.slint  user-plus-icon.slint
ui/keys/: danger-action-row.slint  device-row.slint  keys-page.slint  kv-row.slint  section-header.slint  types.slint
ui/layout/: detail-page.slint  fade-in-page.slint  group-card.slint  info-banner.slint  kv-row.slint  section-header.slint  section.slint  shared-groups.slint  side-panel.slint
ui/left-rail/: left-rail.slint
ui/login/: form-messages.slint  login-screen.slint  password-field.slint  readout-box.slint  vault-field.slint
ui/main-pane/: add-member-card.slint  add-member-row.slint  chat-header.slint  chat-request-banner.slint  chat-search-bar.slint  composer.slint  encryption-banner.slint  get-started.slint  group-hero.slint  group-leave-row.slint  group-member-menu.slint  group-member-row.slint  group-members-header.slint  group-members-panel.slint  group-settings-card.slint  hero-edit-field.slint  main-pane.slint  mention-card.slint  mention-picker.slint  mentions-inbox.slint  session-divider.slint
ui/messages/: hover-actions.slint  incoming-row.slint  message-bubble.slint  message-context-menu.slint  message-effect-layer.slint  message-view.slint  messages.slint  outgoing-row.slint  reaction-chip.slint  reactions-row.slint  system-line.slint
ui/modals/: account-switcher-confirm.slint  account-switcher-detail.slint  account-switcher-list.slint  account-switcher-modal.slint  add-account-modal.slint  add-contact-modal.slint  backup-create-modal.slint  command-palette.slint  confirm-modal.slint  debug-json-modal.slint  edit-history-modal.slint  encryption-info-modal.slint  export-key-modal.slint  forward-chat-picker-modal.slint  forward-chat-row.slint  global-search-modal.slint  image-viewer-modal.slint  import-backup-modal.slint  kbd-pill.slint  language-picker-modal.slint  modal.slint  nickname-modal.slint  palette-row.slint  profile-modal.slint  qr-modal.slint  reveal-nsec-modal.slint  search-hit-row.slint  start-new-chat-modal.slint  video-viewer-modal.slint
ui/primitives/: action-button.slint  avatar.slint  button.slint  chat-context-menu.slint  chat-list-entry.slint  chat-list-item.slint  context-menu.slint  copy-chip.slint  cypher-scroll.slint  focus-caret.slint  form-label.slint  hover-actions.slint  incoming-row.slint  line-input.slint  menu-item.slint  message-bubble.slint  message-effect-layer.slint  message-view.slint  nav-chevron.slint  outgoing-row.slint  paper-doodles.slint  pill.slint  quick-react-cell.slint  reactions-row.slint  scroll-view.slint  section-label.slint  sketch-outline.slint  status-line.slint  status-pill.slint  synth-grid.slint  toggle.slint  tooltip.slint  unread-badge.slint
ui/profile/: info-row.slint  profile-page.slint  profile-qr-plate.slint  wallet-address-row.slint
ui/settings/: about-hero-card.slint  about-pane.slint  accent-picker.slint  advanced-pane.slint  appearance-pane.slint  debug-pane.slint  general-pane.slint  network-pane.slint  notifications-pane.slint  placeholder-pane.slint  pref-row.slint  settings-nav-item.slint  settings-page.slint  settings-sidebar.slint  storage-pane.slint  theme-picker.slint  toggle.slint
ui/shell/: app-shell.slint  app-state.slint  confirm-flows.slint  error-banner.slint  left-rail.slint  login-gate.slint  mentions-icon.slint  modal-host.slint  shell-timers.slint  splash.slint  status-bar.slint  title-bar.slint
wnl-ui/: Cargo.toml  build.rs
(+40 files in other folders)
