[workspace]
members = ["wnl-ui"]

[package]
name = "whitenoise-linux"
version = "0.1.0"
edition = "2024"
default-run = "whitenoise-linux"
license = "AGPL-3.0-or-later"

[dependencies]
slint = "1.8"
# Owns the Slint compilation + the huge generated UI module, so Rust edits
# here don't recompile the whole UI tree. See wnl-ui/src/lib.rs.
wnl-ui = { path = "wnl-ui" }
nostr = { version = "0.44.2", default-features = false, features = [
  "std",
  "nip59",
] }
# Password-encrypted secret vault (replaces libsecret/pass). Argon2id derives a
# 32-byte key from the user's password; XChaCha20-Poly1305 seals the secret DB.
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.2"
tokio = { version = "1", features = [
  "sync",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
hex = "0.4"
# npub QR on the profile page. Matrix only — we rasterize to RGBA ourselves,
# so the `image`/`svg` render features stay off.
qrcode = { version = "0.14", default-features = false }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
arboard = "3"
directories = "5"
emojis = "0.6"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "gif",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = { version = "0.15", default-features = false, features = [
  "xdg-portal",
  "async-std",
] }
mime_guess = "2"
# Cross-platform desktop notifications (freedesktop/dbus on Linux & *BSD,
# NSUserNotification on macOS). Used for incoming-message alerts.
notify-rust = "4"
# Rasterizes the assets/animals/*.svg starter avatars over an npub-derived
# gradient (animal_avatar.rs). Shape rendering only — no text/font features.
resvg = { version = "0.45", default-features = false }
# Local-timezone rendering of message/KP timestamps. Reads the system tz
# database (Linux/macOS/FreeBSD), so DST offsets are right per-timestamp.
jiff = "0.2"
# Audio capture (voice messages) — cross-platform input stream.
cpal = "0.15"
# WAV encoding for recorded voice messages (simple, royalty-free, mpv/rodio decode).
hound = "3.5"
# In-memory audio playback for received voice messages.
rodio = { version = "0.19", default-features = false, features = ["wav"] }
# Pinned to PR #849 (add-markdown-text-effects) for the `{big}…{/big}` inline
# text-effect syntax (Inline::Effect). Drop the rev once it merges to master.
whitenoise-markdown = { git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "973f3ab65bf410c35e401935cdf4374b77770901" }
marmot-app = { git = "https://github.com/marmot-protocol/darkmatter.git", branch = "master", features = ["otlp-export"] }
marmot-account = { git = "https://github.com/marmot-protocol/darkmatter.git", branch = "master" }
cgka-traits = { git = "https://github.com/marmot-protocol/darkmatter.git", branch = "master" }

[build-dependencies]
# Resolves libmpv's link flags for build.rs (see src/mpv.rs FFI core).
pkg-config = "0.3"

# Dev builds keep our own crate at opt-level 0 (fast incremental compiles) but
# optimize every dependency. All the heavy lifting — SQLCipher page decryption,
# MLS/AEAD crypto, Argon2id key derivation, image decoding, markdown parsing —
# happens in deps; at opt-level 0 they make unlock, boot, and chat switching
# take seconds. Deps are compiled once and cached, so only the first build
# after this change is slow.
[profile.dev.package."*"]
opt-level = 3

# Our own crate gets light optimization too: the chat-row pipeline (markdown
# flattening, line wrapping, 80+ Slint structs per chat switch) is hot enough
# that opt-level 0 is visibly slow. Level 1 keeps incremental compiles quick.
#
# `line-tables-only` keeps file:line in panics and backtraces but drops
# variable-level debuginfo. Full `debug = 2` on 900 opt-level-3 crates was the
# single biggest cost in both compile and link time (and most of target/'s
# size); flip back to `debug = true` temporarily if you need to inspect
# variables in a debugger.
[profile.dev]
opt-level = 1
debug = "line-tables-only"

# wnl-ui/build.rs composes the Twemoji sprite sheet with the `image` crate; optimize
# build scripts and their deps so that first build doesn't crawl either.
[profile.dev.build-override]
opt-level = 3
